--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
+<style>
+    .wrapper {
+      max-width: 70%
+    }
+</style>
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
